<package format="2">
  <name>pcd_to_2d_grid_map</name>
  <version>0.0.1</version>
  <description>Convert PCD / PointCloud2 to 2D occupancy grid map</description>

  <maintainer email="daiwu527@gmail.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>libpcl-dev</build_depend>
  <exec_depend>libpcl-dev</exec_depend>

</package>