<?xml version="1.0"?>
<package format="2">
  <name>unitree_livox_converter</name>
  <version>0.0.1</version>
  <description>Convert PointCloud2 to livox_ros_driver/CustomMsg for FAST-LIVO2.</description>

  <maintainer email="daiwu527@gmail.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>livox_ros_driver</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
</package>