<?xml version="1.0"?>
<package format="2">
  <name>unitree_mid360_ros1_bridge</name>
  <version>0.0.1</version>
  <description>Bridge Unitree G1 Mid360 DDS topics to ROS1 topics.</description>

  <maintainer email="daiwu527@gmail.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>